--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>内联</title>
+		<title>李彩霞博客</title>
 		<link rel="stylesheet" type="text/css" href="pagefirst/first.css">
 		<script src="http:////cdn.bootcss.com/jquery/2.1.4/jquery.min.js"></script>
 		<script src="pagefirst/first.js"></script>
